Provider list is now filtered by categoryId.
